Some in progress changes to make training work.

--- a/deepvariant.ipynb
+++ b/deepvariant.ipynb
@@ -33,7 +33,10 @@
     "\n",
     "PROJECT=\"cloud-ml-dev\"\n",
     "CLUSTER=\"gke-tf-example\"\n",
-    "ZONE=\"us-east1-d\""
+    "ZONE=\"us-east1-d\"\n",
+    "\n",
+    "# GCS directory to use for this run\n",
+    "GCS_DIR = \"gs://cloud-ml-dev_jlewi_deep_variant/experiments/2017_1210\"\n"
    ]
   },
   {
@@ -294,26 +297,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/jovyan/deepvariant-pd/deepvariant/data/deepvariant/data/test_output'"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "local_output_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
    "outputs": [
@@ -344,20 +327,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare the dataset config"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gunzip -k {local_output_dir}/chr20.tfrecord.20170815.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "release \"make-test\" deleted\r\n"
+      "total 27327112\r\n",
+      "drwxr-xr-x 2 jovyan     users             4096 Dec 10 23:14 .\r\n",
+      "drwxr-xr-x 6 jovyan     users             4096 Dec 10 02:03 ..\r\n",
+      "-rw-r--r-- 1 jovyan     users      26441264520 Dec 10 07:16 chr20.tfrecord.20170815\r\n",
+      "-rw-r--r-- 1 4294967294 4294967294  1541678261 Dec 10 07:16 chr20.tfrecord.20170815.gz\r\n"
      ]
     }
    ],
    "source": [
-    "!~/helm delete --purge make-test"
+    "!ls -la {local_output_dir}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "num_examples = 0\n",
+    "\n",
+    "examples_file = os.path.join(local_output_dir, \"chr20.tfrecord.20170815\")\n",
+    "for _ in tf.python_io.tf_record_iterator(examples_file):\n",
+    "    num_examples += 1\n",
+    "\n",
+    "print(\"num_examples=%s\" % num_examples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2017, 12, 10, 23, 47, 25, 417133)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now.strftime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'examples_path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-119-9fcb89db64da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# TODO(jlewi): What name should we use\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mhf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'name: \"some-name\"\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mhf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tfrecord_path: \"{examples_path}\"\\n'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexamples_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mhf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'num_examples: {0}\\n'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_examples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'examples_path' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the dataset config file.\n",
+    "import datetime\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "# TODO(jlewi): We could put this on GCS \n",
+    "dataset_config_rpath = os.path.join(DATA_DIR, \"experiments\", now.strftime(\"%Y%m%d_%H%M%S\"), \"dataset_config.pbtxt\")\n",
+    "\n",
+    "# TODO(jlewi): It would be better if we loaded up the protocol buffer definition from the DeepVariant soure repo as \n",
+    "# opposed to manually writing the ASCII version directly to a file.\n",
+    "local_dataset_file = os.path.join(NFS_MOUNT_POINT, dataset_config_rpath)\n",
+    "\n",
+    "local_dir = os.path.dirname(local_dataset_file)\n",
+    "if not os.path.exists(local_dir):\n",
+    "    os.makedirs(local_dir)\n",
+    "with open(local_dataset_file, \"w\") as hf:\n",
+    "    # TODO(jlewi): What name should we use\n",
+    "    hf.write('name: \"some-name\"\\n')    \n",
+    "    hf.write('tfrecord_path: \"{examples_path}\"\\n'.format(examples_path))\n",
+    "    hf.write('num_examples: {0}\\n'.format(num_examples))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "train_dir: gs://cloud-ml-dev_jlewi_deep_variant/models/dv2_train_gpu_0820_1748\n",
+    "dataset_config: gs://cloud-ml-dev_jlewi_deep_variant/wgs_dataset.2017-07-06/wgs_training.dataset_config.pbtxt\n",
+    "        \n",
+    "        \n",
+    "# Create a config file for the package.\n",
+    "config = {\n",
+    "    \"cpu_image\": \"gcr.io/deepvariant-docker/deepvariant:0.4.0\",\n",
+    "    \"gpu_image\": \"gcr.io/deepvariant-docker/deepvariant_gpu:0.4.0\",\n",
+    "    \"train_dir\": \"gs://cloud-ml-dev_jlewi_deep_variant/models/dv2_train_gpu_\" + now.strftime(\"%Y%m%d_%H%M%S\"),\n",
+    "    \"dataset_config\":\n",
+    "    \"num_ps\": 2,\n",
+    "    \"num_workers\": 3,\n",
+    "}\n",
+    "    \n",
+    "CONFIG_FILE=\"/tmp/model_train_config.yaml\"\n",
+    "\n",
+    "config_yaml = yaml.dump(config, Dumper=ExplicitDumper, default_flow_style=False)\n",
+    "\n",
+    "with open(CONFIG_FILE, \"w\") as hf:\n",
+    "    hf.write(config_yaml)        "
    ]
   }
  ],
