Update the code to kickoff training.

--- a/deepvariant.ipynb
+++ b/deepvariant.ipynb
@@ -15,12 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set some variables\n",
     "# The bucket on GCS where data is stored.\n",
+    "import datetime\n",
     "import os\n",
     "import yaml\n",
     "BUCKET=\"cloud-ml-dev_jlewi_deep_variant\"\n",
@@ -36,7 +37,15 @@
     "ZONE=\"us-east1-d\"\n",
     "\n",
     "# GCS directory to use for this run\n",
-    "GCS_DIR = \"gs://cloud-ml-dev_jlewi_deep_variant/experiments/2017_1210\"\n"
+    "GCS_DIR = \"gs://cloud-ml-dev_jlewi_deep_variant/experiments/2017_1210\"\n",
+    "GCS_DATASET_CONFIG = os.path.join(GCS_DIR, \"examples\", \"dataset_config.pbtxt\")\n",
+    "\n",
+    "# See https://stackoverflow.com/questions/21016220/is-it-possible-to-emit-valid-yaml-with-anchors-references-disabled-using-ruby\n",
+    "class ExplicitDumper(yaml.SafeDumper):\n",
+    "  \"\"\"A dumper that will never emit aliases.\"\"\"\n",
+    "\n",
+    "  def ignore_aliases(self, data):\n",
+    "    return True"
    ]
   },
   {
@@ -256,13 +265,6 @@
     "import os\n",
     "import yaml\n",
     "\n",
-    "# See https://stackoverflow.com/questions/21016220/is-it-possible-to-emit-valid-yaml-with-anchors-references-disabled-using-ruby\n",
-    "class ExplicitDumper(yaml.SafeDumper):\n",
-    "  \"\"\"A dumper that will never emit aliases.\"\"\"\n",
-    "\n",
-    "  def ignore_aliases(self, data):\n",
-    "    return True\n",
-    "\n",
     "# Create a config file that specifies the shards.\n",
     "# Mount_dir will be the directory in the pods where we mount the NFS share.\n",
     "# IT is set in the chart\n",
@@ -388,41 +390,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2017, 12, 10, 23, 47, 25, 417133)"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "now.strftime"
+    "GCS_EXAMPLES_PATH = os.path.join(GCS_DIR, \"examples\", \"chr20.tfrecord.20170815.gz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'examples_path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-119-9fcb89db64da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# TODO(jlewi): What name should we use\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mhf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'name: \"some-name\"\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mhf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tfrecord_path: \"{examples_path}\"\\n'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexamples_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mhf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'num_examples: {0}\\n'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_examples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'examples_path' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying file:///home/jovyan/deepvariant-pd/deepvariant/data/test_output/chr20.tfrecord.20170815.gz [Content-Type=application/octet-stream]...\r\n",
+      "/ [0 files][    0.0 B/  1.4 GiB]                                                \r",
+      "==> NOTE: You are uploading one or more large file(s), which would run\r\n",
+      "significantly faster if you enable parallel composite uploads. This\r\n",
+      "feature can be enabled by editing the\r\n",
+      "\"parallel_composite_upload_threshold\" value in your .boto\r\n",
+      "configuration file. However, note that if you do this large files will\r\n",
+      "be uploaded as `composite objects\r\n",
+      "<https://cloud.google.com/storage/docs/composite-objects>`_,which\r\n",
+      "means that any user who downloads such objects will need to have a\r\n",
+      "compiled crcmod installed (see \"gsutil help crcmod\"). This is because\r\n",
+      "without a compiled crcmod, computing checksums on composite objects is\r\n",
+      "so slow that gsutil disables downloads of composite objects.\r\n",
+      "\r\n",
+      "-\r",
+      "- [0 files][ 82.2 MiB/  1.4 GiB]                                                \r",
+      "\\\r",
+      "|\r",
+      "| [0 files][198.5 MiB/  1.4 GiB]                                                \r",
+      "/\r",
+      "/ [0 files][283.1 MiB/  1.4 GiB]                                                \r",
+      "-\r",
+      "\\\r",
+      "\\ [0 files][327.4 MiB/  1.4 GiB]                                                \r",
+      "|\r",
+      "/\r",
+      "/ [0 files][390.1 MiB/  1.4 GiB]                                                \r",
+      "-\r",
+      "- [0 files][449.4 MiB/  1.4 GiB]                                                \r",
+      "\\\r",
+      "|\r",
+      "| [0 files][510.5 MiB/  1.4 GiB]                                                \r",
+      "/\r",
+      "-\r",
+      "- [0 files][543.5 MiB/  1.4 GiB]                                                \r",
+      "\\\r",
+      "\\ [0 files][578.3 MiB/  1.4 GiB]                                                \r",
+      "|\r",
+      "/\r",
+      "/ [0 files][630.9 MiB/  1.4 GiB]                                                \r",
+      "-\r",
+      "\\\r",
+      "\\ [0 files][683.5 MiB/  1.4 GiB]   46.2 MiB/s                                   \r",
+      "|\r",
+      "| [0 files][718.8 MiB/  1.4 GiB]   40.6 MiB/s                                   \r",
+      "/\r",
+      "-\r",
+      "- [0 files][752.6 MiB/  1.4 GiB]   41.3 MiB/s                                   \r",
+      "\\\r",
+      "|\r",
+      "| [0 files][801.5 MiB/  1.4 GiB]   44.2 MiB/s                                   \r",
+      "/\r",
+      "/ [0 files][831.2 MiB/  1.4 GiB]   39.3 MiB/s                                   \r",
+      "-\r",
+      "- [0 files][835.8 MiB/  1.4 GiB]    4.4 MiB/s                                   \r",
+      "\\\r",
+      "|\r",
+      "| [0 files][955.7 MiB/  1.4 GiB]   24.1 MiB/s                                   \r",
+      "/\r",
+      "-\r",
+      "- [0 files][  1.0 GiB/  1.4 GiB]   97.5 MiB/s                                   \r",
+      "\\\r",
+      "\\ [0 files][  1.1 GiB/  1.4 GiB]   78.4 MiB/s                                   \r",
+      "|\r",
+      "/\r",
+      "/ [0 files][  1.1 GiB/  1.4 GiB]   65.2 MiB/s                                   \r",
+      "-\r",
+      "\\\r",
+      "\\ [0 files][  1.1 GiB/  1.4 GiB]   58.0 MiB/s                                   \r",
+      "|\r",
+      "| [0 files][  1.1 GiB/  1.4 GiB]   37.7 MiB/s                                   \r",
+      "/\r",
+      "-\r",
+      "- [0 files][  1.2 GiB/  1.4 GiB]   30.5 MiB/s                                   \r",
+      "\\\r",
+      "|\r",
+      "| [0 files][  1.2 GiB/  1.4 GiB]   36.8 MiB/s                                   \r",
+      "/\r",
+      "/ [0 files][  1.3 GiB/  1.4 GiB]   44.3 MiB/s                                   \r",
+      "-\r",
+      "\\\r",
+      "\\ [0 files][  1.3 GiB/  1.4 GiB]   45.1 MiB/s                                   \r",
+      "|\r",
+      "| [0 files][  1.3 GiB/  1.4 GiB]      0.0 B/s                                   \r",
+      "/\r",
+      "-\r",
+      "- [1 files][  1.4 GiB/  1.4 GiB]      0.0 B/s                                   \r",
+      "\\\r",
+      "\r\n",
+      "Operation completed over 1 objects/1.4 GiB.                                      \r\n"
      ]
     }
    ],
+   "source": [
+    "# Copy the data to GCS\n",
+    "!gsutil cp {local_output_dir}/chr20.tfrecord.20170815.gz {GCS_EXAMPLES_PATH}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Create the dataset config file.\n",
     "import datetime\n",
@@ -438,34 +524,72 @@
     "local_dir = os.path.dirname(local_dataset_file)\n",
     "if not os.path.exists(local_dir):\n",
     "    os.makedirs(local_dir)\n",
+    "    \n",
+    "# If we install the appropriate GCS client libraries we can write directly to GCS    \n",
     "with open(local_dataset_file, \"w\") as hf:\n",
     "    # TODO(jlewi): What name should we use\n",
     "    hf.write('name: \"some-name\"\\n')    \n",
-    "    hf.write('tfrecord_path: \"{examples_path}\"\\n'.format(examples_path))\n",
+    "    hf.write('tfrecord_path: \"{0}\"\\n'.format(GCS_EXAMPLES_PATH))\n",
     "    hf.write('num_examples: {0}\\n'.format(num_examples))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying file:///home/jovyan/deepvariant-pd/deepvariant/data/experiments/20171210_235851/dataset_config.pbtxt [Content-Type=application/octet-stream]...\r\n",
+      "/ [0 files][    0.0 B/  151.0 B]                                                \r",
+      "/ [1 files][  151.0 B/  151.0 B]                                                \r",
+      "\r\n",
+      "Operation completed over 1 objects/151.0 B.                                      \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gsutil cp {local_dataset_file} {GCS_DATASET_CONFIG}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: \"some-name\"\r\n",
+      "tfrecord_path: \"gs://cloud-ml-dev_jlewi_deep_variant/experiments/2017_1210/examples/chr20.tfrecord.20170815.gz\"\r\n",
+      "num_examples: 170538\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gsutil cat {GCS_DATASET_CONFIG}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "now = datetime.datetime.now()\n",
-    "\n",
-    "train_dir: gs://cloud-ml-dev_jlewi_deep_variant/models/dv2_train_gpu_0820_1748\n",
-    "dataset_config: gs://cloud-ml-dev_jlewi_deep_variant/wgs_dataset.2017-07-06/wgs_training.dataset_config.pbtxt\n",
-    "        \n",
     "        \n",
     "# Create a config file for the package.\n",
     "config = {\n",
     "    \"cpu_image\": \"gcr.io/deepvariant-docker/deepvariant:0.4.0\",\n",
     "    \"gpu_image\": \"gcr.io/deepvariant-docker/deepvariant_gpu:0.4.0\",\n",
-    "    \"train_dir\": \"gs://cloud-ml-dev_jlewi_deep_variant/models/dv2_train_gpu_\" + now.strftime(\"%Y%m%d_%H%M%S\"),\n",
-    "    \"dataset_config\":\n",
-    "    \"num_ps\": 2,\n",
-    "    \"num_workers\": 3,\n",
+    "    \"train_dir\": os.path.join(GCS_DIR, \"model\"),\n",
+    "    \"dataset_config\": GCS_DATASET_CONFIG,\n",
+    "    \"num_ps\": 1,\n",
+    "    \"num_workers\": 1,\n",
     "}\n",
     "    \n",
     "CONFIG_FILE=\"/tmp/model_train_config.yaml\"\n",
@@ -473,7 +597,55 @@
     "config_yaml = yaml.dump(config, Dumper=ExplicitDumper, default_flow_style=False)\n",
     "\n",
     "with open(CONFIG_FILE, \"w\") as hf:\n",
-    "    hf.write(config_yaml)        "
+    "    hf.write(config_yaml)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME:   train-dv\r\n",
+      "LAST DEPLOYED: Mon Dec 11 01:00:31 2017\r\n",
+      "NAMESPACE: default\r\n",
+      "STATUS: DEPLOYED\r\n",
+      "\r\n",
+      "RESOURCES:\r\n",
+      "==> v1alpha1/TfJob\r\n",
+      "NAME      AGE\r\n",
+      "train-dv  0s\r\n",
+      "\r\n",
+      "\r\n",
+      "NOTES:\r\n",
+      "1. TODO(jlewi): Explain how to get the URl of TensorBoard.\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!~/helm install --name=train-dv ./charts/dv2-train/ -f {CONFIG_FILE}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "release \"train-dv\" deleted\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To clean up the job after it finishes\n",
+    "!~/helm delete --purge train-dv"
    ]
   }
  ],
