Update make-examples so that we can run it in training mode.

--- a/deepvariant.ipynb
+++ b/deepvariant.ipynb
@@ -181,8 +181,49 @@
    ],
    "source": [
     "!mkdir -p {LOCAL_DATA_DIR}/FAKE_FLOWCELL/GRCh38/HG001-NA12878-pFDA/chr20/\n",
-    "#!gsutil cp gs://verily-analysis-precision-fda/FAKE_FLOWCELL/GRCh38/HG001-NA12878-pFDA/chr20/realigned.bam {LOCAL_DATA_DIR}/FAKE_FLOWCELL/GRCh38/HG001-NA12878-pFDA/chr20/\n",
+    "!gsutil cp gs://verily-analysis-precision-fda/FAKE_FLOWCELL/GRCh38/HG001-NA12878-pFDA/chr20/realigned.bam {LOCAL_DATA_DIR}/FAKE_FLOWCELL/GRCh38/HG001-NA12878-pFDA/chr20/\n",
     "!gsutil cp gs://verily-analysis-precision-fda/FAKE_FLOWCELL/GRCh38/HG001-NA12878-pFDA/chr20/realigned.bai {LOCAL_DATA_DIR}/FAKE_FLOWCELL/GRCh38/HG001-NA12878-pFDA/chr20/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying gs://cloud-ml-dev_jlewi_deep_variant/pfda/HG001.vcf.gz.tbi...\r\n",
+      "/ [0 files][    0.0 B/  1.5 MiB]                                                \r",
+      "/ [1 files][  1.5 MiB/  1.5 MiB]                                                \r",
+      "\r\n",
+      "Operation completed over 1 objects/1.5 MiB.                                      \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mkdir -p {LOCAL_DATA_DIR}/pfda\n",
+    "!gsutil cp gs://{BUCKET}/pfda/HG001.vcf.gz {LOCAL_DATA_DIR}/pfda\n",
+    "!gsutil cp gs://{BUCKET}/pfda/HG001.bed {LOCAL_DATA_DIR}/pfda\n",
+    "!gsutil cp gs://{BUCKET}/pfda/HG001.vcf.gz.tbi {LOCAL_DATA_DIR}/pfda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/deepvariant-pd/deepvariant/data\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(LOCAL_DATA_DIR)"
    ]
   },
   {
@@ -250,17 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating /home/jovyan/deepvariant-pd/deepvariant/data/test_output\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import yaml\n",
@@ -277,6 +310,9 @@
     "             \"examples\": os.path.join(MOUNT_DIR, DATA_DIR, \"test_output/chr20.tfrecord.20170815.gz\"),\n",
     "        },\n",
     "    ],\n",
+    "    \"regions\": \"chr20\",\n",
+    "    \"truth_variants\": os.path.join(MOUNT_DIR, DATA_DIR, \"pfda/HG001.vcf.gz\"),\n",
+    "    \"confident_regions\": os.path.join(MOUNT_DIR, DATA_DIR, \"pfda/HG001.bed\"),\n",
     "}\n",
     "\n",
     "\n",
@@ -299,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -307,18 +343,18 @@
      "output_type": "stream",
      "text": [
       "NAME:   make-test\r\n",
-      "LAST DEPLOYED: Sun Dec 10 01:43:32 2017\r\n",
+      "LAST DEPLOYED: Mon Dec 11 13:37:09 2017\r\n",
       "NAMESPACE: default\r\n",
       "STATUS: DEPLOYED\r\n",
       "\r\n",
       "RESOURCES:\r\n",
       "==> v1/Job\r\n",
       "NAME                    DESIRED  SUCCESSFUL  AGE\r\n",
-      "make-examples-akw4fg-0  1        0           0s\r\n",
+      "make-examples-reb4u4-0  1        0           1s\r\n",
       "\r\n",
       "==> v1/Pod(related)\r\n",
       "NAME                          READY  STATUS             RESTARTS  AGE\r\n",
-      "make-examples-akw4fg-0-k26mz  0/1    ContainerCreating  0         0s\r\n",
+      "make-examples-reb4u4-0-d9v2j  0/1    ContainerCreating  0         1s\r\n",
       "\r\n",
       "\r\n"
      ]
@@ -326,6 +362,34 @@
    ],
    "source": [
     "!~/helm install --name=make-test ./charts/make-examples -f {CONFIG_FILE}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "release \"make-test\" deleted\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clean up the make examples job after it finishes\n",
+    "!~/helm delete --purge make-test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete the output file if you want to rerun the experiment.\n",
+    "#os.unlink(os.path.join(LOCAL_DATA_DIR, \"test_output/chr20.tfrecord.20170815.gz\"))"
    ]
   },
   {
