--- a/deepvariant.ipynb
+++ b/deepvariant.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,27 +408,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO(jlewi): Do we need to unzip it to count records? Looks like tf_record_iterator can't work with .gz files.\n",
     "!gunzip -k {local_output_dir}/chr20.tfrecord.20170815.gz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -p {local_output_dir}/tmp\n",
+    "!mv {local_output_dir}/chr20.tfrecord.20170815 {local_output_dir}/tmp/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 27327112\r\n",
-      "drwxr-xr-x 2 jovyan     users             4096 Dec 10 23:14 .\r\n",
-      "drwxr-xr-x 6 jovyan     users             4096 Dec 10 02:03 ..\r\n",
-      "-rw-r--r-- 1 jovyan     users      26441264520 Dec 10 07:16 chr20.tfrecord.20170815\r\n",
-      "-rw-r--r-- 1 4294967294 4294967294  1541678261 Dec 10 07:16 chr20.tfrecord.20170815.gz\r\n"
+      "total 14582808\r\n",
+      "drwxr-xr-x 3 jovyan     users             4096 Dec 11 20:54 .\r\n",
+      "drwxr-xr-x 8 jovyan     users             4096 Dec 11 04:03 ..\r\n",
+      "-rw-r--r-- 1 jovyan     users      14158527262 Dec 11 19:18 chr20.tfrecord.20170815\r\n",
+      "-rw-r--r-- 1 4294967294 4294967294   774242581 Dec 11 19:18 chr20.tfrecord.20170815.gz\r\n",
+      "drwxr-xr-x 2 jovyan     users             4096 Dec 11 20:54 tmp\r\n"
      ]
     }
    ],
@@ -438,9 +450,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num_examples=91236\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "num_examples = 0\n",
@@ -454,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +499,7 @@
      "output_type": "stream",
      "text": [
       "Copying file:///home/jovyan/deepvariant-pd/deepvariant/data/test_output/chr20.tfrecord.20170815.gz [Content-Type=application/octet-stream]...\r\n",
-      "/ [0 files][    0.0 B/  1.4 GiB]                                                \r",
+      "/ [0 files][    0.0 B/738.4 MiB]                                                \r",
       "==> NOTE: You are uploading one or more large file(s), which would run\r\n",
       "significantly faster if you enable parallel composite uploads. This\r\n",
       "feature can be enabled by editing the\r\n",
@@ -485,81 +513,31 @@
       "so slow that gsutil disables downloads of composite objects.\r\n",
       "\r\n",
       "-\r",
-      "- [0 files][ 82.2 MiB/  1.4 GiB]                                                \r",
+      "- [0 files][ 80.7 MiB/738.4 MiB]                                                \r",
       "\\\r",
       "|\r",
-      "| [0 files][198.5 MiB/  1.4 GiB]                                                \r",
+      "| [0 files][192.1 MiB/738.4 MiB]                                                \r",
       "/\r",
-      "/ [0 files][283.1 MiB/  1.4 GiB]                                                \r",
+      "/ [0 files][295.2 MiB/738.4 MiB]                                                \r",
       "-\r",
       "\\\r",
-      "\\ [0 files][327.4 MiB/  1.4 GiB]                                                \r",
+      "\\ [0 files][382.3 MiB/738.4 MiB]                                                \r",
       "|\r",
       "/\r",
-      "/ [0 files][390.1 MiB/  1.4 GiB]                                                \r",
+      "/ [0 files][466.6 MiB/738.4 MiB]                                                \r",
       "-\r",
-      "- [0 files][449.4 MiB/  1.4 GiB]                                                \r",
       "\\\r",
+      "\\ [0 files][551.7 MiB/738.4 MiB]                                                \r",
       "|\r",
-      "| [0 files][510.5 MiB/  1.4 GiB]                                                \r",
+      "| [0 files][627.8 MiB/738.4 MiB]                                                \r",
       "/\r",
       "-\r",
-      "- [0 files][543.5 MiB/  1.4 GiB]                                                \r",
+      "- [0 files][705.1 MiB/738.4 MiB]                                                \r",
       "\\\r",
-      "\\ [0 files][578.3 MiB/  1.4 GiB]                                                \r",
+      "\\ [1 files][738.4 MiB/738.4 MiB]                                                \r",
       "|\r",
-      "/\r",
-      "/ [0 files][630.9 MiB/  1.4 GiB]                                                \r",
-      "-\r",
-      "\\\r",
-      "\\ [0 files][683.5 MiB/  1.4 GiB]   46.2 MiB/s                                   \r",
-      "|\r",
-      "| [0 files][718.8 MiB/  1.4 GiB]   40.6 MiB/s                                   \r",
-      "/\r",
-      "-\r",
-      "- [0 files][752.6 MiB/  1.4 GiB]   41.3 MiB/s                                   \r",
-      "\\\r",
-      "|\r",
-      "| [0 files][801.5 MiB/  1.4 GiB]   44.2 MiB/s                                   \r",
-      "/\r",
-      "/ [0 files][831.2 MiB/  1.4 GiB]   39.3 MiB/s                                   \r",
-      "-\r",
-      "- [0 files][835.8 MiB/  1.4 GiB]    4.4 MiB/s                                   \r",
-      "\\\r",
-      "|\r",
-      "| [0 files][955.7 MiB/  1.4 GiB]   24.1 MiB/s                                   \r",
-      "/\r",
-      "-\r",
-      "- [0 files][  1.0 GiB/  1.4 GiB]   97.5 MiB/s                                   \r",
-      "\\\r",
-      "\\ [0 files][  1.1 GiB/  1.4 GiB]   78.4 MiB/s                                   \r",
-      "|\r",
-      "/\r",
-      "/ [0 files][  1.1 GiB/  1.4 GiB]   65.2 MiB/s                                   \r",
-      "-\r",
-      "\\\r",
-      "\\ [0 files][  1.1 GiB/  1.4 GiB]   58.0 MiB/s                                   \r",
-      "|\r",
-      "| [0 files][  1.1 GiB/  1.4 GiB]   37.7 MiB/s                                   \r",
-      "/\r",
-      "-\r",
-      "- [0 files][  1.2 GiB/  1.4 GiB]   30.5 MiB/s                                   \r",
-      "\\\r",
-      "|\r",
-      "| [0 files][  1.2 GiB/  1.4 GiB]   36.8 MiB/s                                   \r",
-      "/\r",
-      "/ [0 files][  1.3 GiB/  1.4 GiB]   44.3 MiB/s                                   \r",
-      "-\r",
-      "\\\r",
-      "\\ [0 files][  1.3 GiB/  1.4 GiB]   45.1 MiB/s                                   \r",
-      "|\r",
-      "| [0 files][  1.3 GiB/  1.4 GiB]      0.0 B/s                                   \r",
-      "/\r",
-      "-\r",
-      "- [1 files][  1.4 GiB/  1.4 GiB]      0.0 B/s                                   \r",
-      "\\\r",
       "\r\n",
-      "Operation completed over 1 objects/1.4 GiB.                                      \r\n"
+      "Operation completed over 1 objects/738.4 MiB.                                    \r\n"
      ]
     }
    ],
@@ -570,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +644,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu_image: gcr.io/deepvariant-docker/deepvariant:0.4.0\r\n",
+      "dataset_config: gs://cloud-ml-dev_jlewi_deep_variant/experiments/2017_1210/examples/dataset_config.pbtxt\r\n",
+      "gpu_image: gcr.io/deepvariant-docker/deepvariant_gpu:0.4.0\r\n",
+      "num_ps: 1\r\n",
+      "num_workers: 1\r\n",
+      "train_dir: gs://cloud-ml-dev_jlewi_deep_variant/experiments/2017_1210/model\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat {CONFIG_FILE}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
      "output_type": "stream",
      "text": [
       "NAME:   train-dv\r\n",
-      "LAST DEPLOYED: Mon Dec 11 01:00:31 2017\r\n",
+      "LAST DEPLOYED: Mon Dec 11 22:04:34 2017\r\n",
       "NAMESPACE: default\r\n",
       "STATUS: DEPLOYED\r\n",
       "\r\n",
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
