Get model eval working.

--- a/deepvariant.ipynb
+++ b/deepvariant.ipynb
@@ -617,18 +617,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "now = datetime.datetime.now()\n",
-    "        \n",
+    "\n",
+    "train_dir = os.path.join(GCS_DIR, \"model\")\n",
     "# Create a config file for the package.\n",
-    "config = {\n",
+    "train_config = {\n",
     "    \"cpu_image\": \"gcr.io/deepvariant-docker/deepvariant:0.4.0\",\n",
     "    \"gpu_image\": \"gcr.io/deepvariant-docker/deepvariant_gpu:0.4.0\",\n",
-    "    \"train_dir\": os.path.join(GCS_DIR, \"model\"),\n",
+    "    \"train_dir\": train_dir,\n",
     "    \"dataset_config\": GCS_DATASET_CONFIG,\n",
     "    \"num_ps\": 1,\n",
     "    \"num_workers\": 1,\n",
@@ -636,7 +637,7 @@
     "    \n",
     "CONFIG_FILE=\"/tmp/model_train_config.yaml\"\n",
     "\n",
-    "config_yaml = yaml.dump(config, Dumper=ExplicitDumper, default_flow_style=False)\n",
+    "config_yaml = yaml.dump(train_config, Dumper=ExplicitDumper, default_flow_style=False)\n",
     "\n",
     "with open(CONFIG_FILE, \"w\") as hf:\n",
     "    hf.write(config_yaml)"
@@ -710,6 +711,62 @@
    "source": [
     "# To clean up the job after it finishes\n",
     "!~/helm delete --purge train-dv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run Model Eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a config file for the package.\n",
+    "eval_config = {\n",
+    "    \"image\": \"gcr.io/deepvariant-docker/deepvariant:0.4.0\",    \n",
+    "    \"dataset_config_pbtxt\": GCS_DATASET_CONFIG,\n",
+    "    \"train_dir\": train_config[\"train_dir\"],\n",
+    "    \"eval_dir\": os.path.join(GCS_DIR, \"eval\"),\n",
+    "}\n",
+    "    \n",
+    "EVAL_CONFIG_FILE=\"/tmp/model_eval_config.yaml\"\n",
+    "\n",
+    "config_yaml = yaml.dump(eval_config, Dumper=ExplicitDumper, default_flow_style=False)\n",
+    "\n",
+    "with open(EVAL_CONFIG_FILE, \"w\") as hf:\n",
+    "    hf.write(config_yaml)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME:   train-eval\r\n",
+      "LAST DEPLOYED: Mon Dec 11 22:19:19 2017\r\n",
+      "NAMESPACE: default\r\n",
+      "STATUS: DEPLOYED\r\n",
+      "\r\n",
+      "RESOURCES:\r\n",
+      "==> v1alpha1/TfJob\r\n",
+      "NAME        AGE\r\n",
+      "train-eval  0s\r\n",
+      "\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!~/helm install --name=train-eval ./charts/dv2-eval/ -f {EVAL_CONFIG_FILE}"
    ]
   }
  ],
